<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingLeft="@dimen/margin80">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin5"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/itemLineaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ORDER_NBR"
                android:textSize="@dimen/text10" />

            <TextView
                android:id="@+id/orderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/text30"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:text="@string/DATE"
                android:textSize="@dimen/text15" 
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderBillingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:text=""
                android:textSize="@dimen/text15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/salesmanName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:text="@string/SALESMAN"
                android:textSize="@dimen/text15"  />
            
            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:text="@string/CUSTOMER"
                android:textSize="@dimen/text15"  />
            
            <TextView
                android:id="@+id/orderType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:text="@string/ORDER_TYPE"
                android:textSize="@dimen/text22"
                android:textStyle="bold"  />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin5"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginTop="@dimen/margin5"
            android:layout_weight="1"
            android:orientation="vertical" >
            
			<TextView
			    android:id="@+id/cantidadTitle"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="right"
			    android:gravity="right"
			    android:text="@string/TOTAL"
			    android:textSize="@dimen/text10" />
			
            <TextView
                android:id="@+id/orderQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text=" 0 "
                android:textSize="@dimen/text30"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/orderNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin5"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:paddingLeft="@dimen/margin80"
        android:text="@string/NOTES"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/orderItemsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin15"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_weight="2"
        android:paddingLeft="@dimen/margin80"
        android:text="@string/NOTES" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:paddingLeft="@dimen/margin80" >

    </LinearLayout>

</LinearLayout> 